# openmvs_slam

./: CMakeLists.txt
apps/DensifyPointCloud/: CMakeLists.txt  DensifyPointCloud.cpp
libs/IO/: read_pose.cpp  read_pose.h
